--- a/nodejs-assets/nodejs-project/index.html
+++ b/nodejs-assets/nodejs-project/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./chart.js"></script>
     <title>JBD BMS</title>
     <style>
       * {
@@ -160,11 +161,31 @@
       </div>
 
       <div id="sections"></div>
+      <div id="charts">
+        <canvas id="voltageChart"></canvas>
+      </div>
     </div>
   </body>
 
   <script>
-    const infoUrl = `/info`;
+
+  class Plotter {
+    labels = [];
+    data = [];
+    onAdd = null
+    addValue = (value) => {
+      const date = new Date();
+      this.labels.push(Intl.DateTimeFormat('en', {timeStyle: "short"}).format(date));
+      this.data.push(value);
+      this.onAdd?.({label: date, value});
+    }
+  }
+
+  const voltagePlotter = new Plotter();
+
+
+
+    const infoUrl = `http://192.168.1.190:12345/info`;
 
     /** @returns {PromiseLike<{
       name: string;
@@ -233,6 +254,8 @@
     function createCellsSection(balanceStatus, cellVolts) {
       if (!balanceStatus || !cellVolts) return;
       const existing = document.getElementById('cellsSection');
+
+      voltagePlotter.addValue(cellVolts[1]);
 
       const element = `
           <div id="cellsSection">
@@ -369,5 +392,35 @@
       });
     }
     fetchSchedule();
+
+
+    const ctx = document.getElementById('voltageChart');
+    const chart =new Chart(ctx, {
+    type: 'line',
+    data: {
+      labels: voltagePlotter.labels,
+      datasets: [{
+        label: 'Voltage',
+        data: voltagePlotter.data,
+        fill: true,
+        backgroundColor: "rgba(255,255,255,0.1)",
+        borderColor: 'rgb(75, 192, 192)',
+        tension: 0.1
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  });
+  voltagePlotter.onAdd = () => {
+    chart.data.labels = voltagePlotter.labels;
+    chart.data.datasets[0].data = voltagePlotter.data;
+    chart.update();
+  }
+
   </script>
 </html>
