--- a/nodejs-assets/nodejs-project/index.html
+++ b/nodejs-assets/nodejs-project/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./chartjs-plugin-autocolors.js"></script>
     <script src="./chart.js"></script>
     <title>JBD BMS</title>
     <style>
@@ -548,6 +549,26 @@
     }
     fetchSchedule();
 
+    const autocolors = window['chartjs-plugin-autocolors'];
+    Chart.register(autocolors);
+    const lighten = (color, value) =>
+      Chart.helpers.color(color).lighten(value).rgbString();
+    const brighten = color => Chart.helpers.color(color).alpha(1).rgbString();
+
+    Chart.register({
+      id: 'legendMargin',
+      beforeInit(chart, legend, options) {
+        let fitValue = chart.legend.fit;
+        chart.legend.fit = function fit() {
+          fitValue.bind(chart.legend)();
+          return (this.height += options.paddingTop);
+        };
+      },
+      defaults: {
+        paddingTop: 16,
+      },
+    });
+
     const ctx = document.getElementById('voltageChart');
     const chart = new Chart(ctx, {
       type: 'line',
@@ -558,7 +579,6 @@
             label: 'Capacity',
             data: plotter.data.capacity,
             fill: false,
-            borderColor: 'rgb(75, 192, 192)',
             pointBorderColor: 'rgba(0, 0, 0, 0)',
             pointBackgroundColor: 'rgba(0, 0, 0, 0)',
             pointHoverBorderColor: 'rgb(75, 192, 192)',
@@ -568,7 +588,6 @@
             label: 'Current',
             data: plotter.data.current,
             fill: false,
-            borderColor: 'red',
             pointBorderColor: 'rgba(0, 0, 0, 0)',
             pointBackgroundColor: 'rgba(0, 0, 0, 0)',
             pointHoverBorderColor: 'red',
@@ -596,8 +615,23 @@
           // },
         },
         plugins: {
+          legend: {
+            align: 'start',
+            labels: {
+              boxHeight: 20,
+            },
+          },
           tooltip: {
             animation: false,
+          },
+          autocolors: {
+            customize(context) {
+              const colors = context.colors;
+              return {
+                border: brighten(lighten(colors.border, 0.2)),
+                background: brighten(lighten(colors.background, 0.2)),
+              };
+            },
           },
         },
       },
@@ -613,7 +647,6 @@
             label: `Cell ${i + 1}`,
             data: [],
             fill: false,
-            borderColor: 'rgb(75, 192, 192)',
             pointBorderColor: 'rgba(0, 0, 0, 0)',
             pointBackgroundColor: 'rgba(0, 0, 0, 0)',
             pointHoverBorderColor: 'rgb(75, 192, 192)',
