--- a/nodejs-assets/nodejs-project/index.html
+++ b/nodejs-assets/nodejs-project/index.html
@@ -613,6 +613,18 @@
           // y: {
           //   beginAtZero: true,
           // },
+          x: {
+            display: true,
+            grid: {
+              color: 'rgba(255, 255, 255, 0.1)',
+            },
+          },
+          y: {
+            display: true,
+            grid: {
+              color: 'rgba(255, 255, 255, 0.1)',
+            },
+          },
         },
         plugins: {
           legend: {
