--- a/nodejs-assets/nodejs-project/index.html
+++ b/nodejs-assets/nodejs-project/index.html
@@ -394,8 +394,8 @@
       return indices;
     }
 
-    const infoUrl = `http://192.168.1.190:12345/info`;
-    // const infoUrl = `/info`;
+    // const infoUrl = `http://192.168.1.190:12345/info`;
+    const infoUrl = `/info`;
 
     /** @returns {PromiseLike<{
           name: string;
