--- a/nodejs-assets/nodejs-project/index.html
+++ b/nodejs-assets/nodejs-project/index.html
@@ -3,10 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0" />
 
-    <script src="./chartjs-plugin-autocolors.js"></script>
-    <script src="./chart.js"></script>
-    <script src="./hammerjs.js"></script>
-    <script src="./chartjs-plugin-zoom.min.js"></script>
+    <script src="./echarts.min.js"></script>
 
     <title>JBD BMS</title>
     <style>
@@ -171,6 +168,12 @@
       #charts {
         height: 500px;
       }
+      #voltageChart {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        width: 100%;
+        height: 500px;
+      }
     </style>
   </head>
   <body>
@@ -190,7 +193,7 @@
 
       <div id="sections"></div>
       <div id="charts">
-        <canvas id="voltageChart"></canvas>
+        <div id="voltageChart"></div>
       </div>
     </div>
   </body>
@@ -475,8 +478,8 @@
       let highVoltageIndex = indicesOfHigh.length === 1 ? indicesOfHigh[0] : -1;
       let lowVoltageIndex = indicesOfLow.length === 1 ? indicesOfLow[0] : -1;
 
-      const highVolt = cellVolts[indicesOfHigh[0]];
-      const lowVolt = cellVolts[indicesOfLow[0]];
+      const highVolt = cellVolts[indicesOfHigh[0]].toFixed(3);
+      const lowVolt = cellVolts[indicesOfLow[0]].toFixed(3);
 
       const voltageDiff = Math.abs(
         cellVolts[indicesOfHigh[0]] - cellVolts[indicesOfLow[0]],
@@ -673,184 +676,300 @@
     }
     fetchSchedule();
 
-    const autocolors = window['chartjs-plugin-autocolors'];
-    Chart.register(autocolors);
-    Chart.register(ChartZoom);
-
-    const lighten = (color, value) =>
-      Chart.helpers.color(color).lighten(value).rgbString();
-    const brighten = color => Chart.helpers.color(color).alpha(1).rgbString();
-
-    Chart.register({
-      id: 'legendMargin',
-      beforeInit(chart, legend, options) {
-        let fitValue = chart.legend.fit;
-        chart.legend.fit = function fit() {
-          fitValue.bind(chart.legend)();
-          return (this.height += options.paddingTop);
-        };
-      },
-      defaults: {
-        paddingTop: 16,
-      },
-    });
-
     const ctx = document.getElementById('voltageChart');
-    Chart.defaults.color = 'white';
-
-    const chart = new Chart(ctx, {
-      type: 'line',
-      data: {
-        labels: plotter.labels,
-        datasets: [
-          {
-            label: 'Cap',
-            data: plotter.data.capacity,
-            fill: false,
-            pointBorderColor: 'rgba(0, 0, 0, 0)',
-            pointBackgroundColor: 'rgba(0, 0, 0, 0)',
-            pointHoverBorderColor: 'rgb(75, 192, 192)',
-            tension: 0.1,
-            hidden: true,
-          },
-          {
-            label: 'Volts',
-            data: plotter.data.capacity,
-            fill: false,
-            pointBorderColor: 'rgba(0, 0, 0, 0)',
-            pointBackgroundColor: 'rgba(0, 0, 0, 0)',
-            pointHoverBorderColor: 'rgb(75, 192, 192)',
-            hidden: true,
-            tension: 0.1,
-          },
-          {
-            label: 'Curr',
-            data: plotter.data.current,
-            fill: false,
-            pointBorderColor: 'rgba(0, 0, 0, 0)',
-            pointBackgroundColor: 'rgba(0, 0, 0, 0)',
-            pointHoverBorderColor: 'red',
-            hidden: true,
-            tension: 0.1,
-          },
-
-          {
-            label: 'Cell Diff',
-            data: plotter.data.current,
-            fill: false,
-            pointBorderColor: 'rgba(0, 0, 0, 0)',
-            pointBackgroundColor: 'rgba(0, 0, 0, 0)',
-            pointHoverBorderColor: 'red',
-            tension: 0.1,
-          },
+    // Specify the configuration items and data for the chart
+    const option = () => ({
+      tooltip: {
+        trigger: 'axis',
+        position: function (pt) {
+          return [pt[0], '10%'];
+        },
+      },
+      legend: {
+        selected: {
+          Cap: false,
+          Volts: false,
+          Curr: false,
+          ...Object.fromEntries(
+            plotter.data.cells.map((c, i) => [`Cell ${i + 1}`, false]),
+          ),
+        },
+        data: [
+          'Cap',
+          'Volts',
+          'Curr',
+          'Cell Diff',
+          ...plotter.data.cells.map((c, i) => `Cell ${i + 1}`),
         ],
       },
-      options: {
-        spanGaps: true,
-        maintainAspectRatio: false,
-        transitions: {
-          zoom: {
-            animation: {
-              duration: 0,
-            },
-          },
-        },
-        interaction: {
-          mode: 'nearest',
-          intersect: false,
-        },
-        hover: {
-          intersect: false,
-        },
-        tooltips: {
-          intersect: false,
-          mode: 'x',
-        },
-
-        scales: {
-          // y: {
-          //   beginAtZero: true,
-          // },
-          x: {
-            display: true,
-            grid: {
-              color: 'rgba(255, 255, 255, 0.1)',
-            },
-          },
-          y: {
-            display: true,
-            grid: {
-              color: 'rgba(255, 255, 255, 0.1)',
-            },
-          },
-        },
-        plugins: {
-          zoom: {
-            limits: {
-              x: {min: 10, max: 'original'},
-              y: {min: 10, max: 'original'},
-            },
-            pan: {
-              enabled: true,
-              mode: 'x',
-            },
-            zoom: {
-              wheel: {
-                enabled: true,
-                speed: -0.05,
-              },
-              pinch: {
-                enabled: true,
-              },
-              mode: 'x',
-            },
-          },
-          legend: {
-            align: 'start',
-            labels: {
-              boxHeight: 20,
-            },
-          },
-          tooltip: {
-            animation: false,
-          },
-          autocolors: {
-            customize(context) {
-              const colors = context.colors;
-              return {
-                border: brighten(lighten(colors.border, 0.2)),
-                background: brighten(lighten(colors.background, 0.2)),
-              };
-            },
+      xAxis: {
+        data: plotter.labels,
+        axisLabel: {
+          textStyle: {
+            color: 'white',
           },
         },
       },
+      dataZoom: [
+        {
+          type: 'inside',
+          start: 0,
+          end: 100,
+        },
+        {
+          start: 0,
+          end: 100,
+        },
+      ],
+      yAxis: {
+        scale: true,
+        splitLine: {
+          lineStyle: {
+            color: 'rgba(255,255,255,0.2)',
+          },
+        },
+        axisLabel: {
+          textStyle: {
+            color: 'white',
+          },
+        },
+      },
+      series: [
+        {
+          name: 'Cap',
+          type: 'line',
+          smooth: false,
+          symbol: 'none',
+          connectNulls: true,
+          visible: false,
+          data: plotter.data.capacity,
+        },
+        {
+          name: 'Volts',
+          type: 'line',
+          smooth: false,
+          symbol: 'none',
+          connectNulls: true,
+          visible: false,
+          data: plotter.data.voltage,
+        },
+        {
+          name: 'Curr',
+          type: 'line',
+          smooth: false,
+          symbol: 'none',
+          connectNulls: true,
+          visible: false,
+          data: plotter.data.current,
+        },
+        {
+          name: 'Cell Diff',
+          type: 'line',
+          smooth: false,
+          symbol: 'none',
+
+          connectNulls: true,
+          data: plotter.data.cellDiff,
+        },
+        ...plotter.data.cells.map((c, i) => ({
+          name: `Cell ${i + 1}`,
+          type: 'line',
+          smooth: false,
+          symbol: 'none',
+
+          connectNulls: true,
+          visible: false,
+          data: c,
+        })),
+      ],
     });
+
+    // Display the chart using the configuration items and data just specified.
+    const myChart = echarts.init(ctx);
+    myChart.setOption(option());
+
+    // const autocolors = window['chartjs-plugin-autocolors'];
+    // Chart.register(autocolors);
+    // Chart.register(ChartZoom);
+
+    // const lighten = (color, value) =>
+    //   Chart.helpers.color(color).lighten(value).rgbString();
+    // const brighten = color => Chart.helpers.color(color).alpha(1).rgbString();
+
+    // Chart.register({
+    //   id: 'legendMargin',
+    //   beforeInit(chart, legend, options) {
+    //     let fitValue = chart.legend.fit;
+    //     chart.legend.fit = function fit() {
+    //       fitValue.bind(chart.legend)();
+    //       return (this.height += options.paddingTop);
+    //     };
+    //   },
+    //   defaults: {
+    //     paddingTop: 16,
+    //   },
+    // });
+
+    // const ctx = document.getElementById('voltageChart');
+    // Chart.defaults.color = 'white';
+
+    // const chart = new Chart(ctx, {
+    //   type: 'line',
+    //   data: {
+    //     labels: plotter.labels,
+    //     datasets: [
+    //       {
+    //         label: 'Cap',
+    //         data: plotter.data.capacity,
+    //         fill: false,
+    //         pointBorderColor: 'rgba(0, 0, 0, 0)',
+    //         pointBackgroundColor: 'rgba(0, 0, 0, 0)',
+    //         pointHoverBorderColor: 'rgb(75, 192, 192)',
+    //         tension: 0.1,
+    //         hidden: true,
+    //       },
+    //       {
+    //         label: 'Volts',
+    //         data: plotter.data.capacity,
+    //         fill: false,
+    //         pointBorderColor: 'rgba(0, 0, 0, 0)',
+    //         pointBackgroundColor: 'rgba(0, 0, 0, 0)',
+    //         pointHoverBorderColor: 'rgb(75, 192, 192)',
+    //         hidden: true,
+    //         tension: 0.1,
+    //       },
+    //       {
+    //         label: 'Curr',
+    //         data: plotter.data.current,
+    //         fill: false,
+    //         pointBorderColor: 'rgba(0, 0, 0, 0)',
+    //         pointBackgroundColor: 'rgba(0, 0, 0, 0)',
+    //         pointHoverBorderColor: 'red',
+    //         hidden: true,
+    //         tension: 0.1,
+    //       },
+
+    //       {
+    //         label: 'Cell Diff',
+    //         data: plotter.data.current,
+    //         fill: false,
+    //         pointBorderColor: 'rgba(0, 0, 0, 0)',
+    //         pointBackgroundColor: 'rgba(0, 0, 0, 0)',
+    //         pointHoverBorderColor: 'red',
+    //         tension: 0.1,
+    //       },
+    //     ],
+    //   },
+    //   options: {
+    //     spanGaps: true,
+    //     maintainAspectRatio: false,
+    //     transitions: {
+    //       zoom: {
+    //         animation: {
+    //           duration: 0,
+    //         },
+    //       },
+    //     },
+    //     interaction: {
+    //       mode: 'nearest',
+    //       intersect: false,
+    //     },
+    //     hover: {
+    //       intersect: false,
+    //     },
+    //     tooltips: {
+    //       intersect: false,
+    //       mode: 'x',
+    //     },
+
+    //     scales: {
+    //       // y: {
+    //       //   beginAtZero: true,
+    //       // },
+    //       x: {
+    //         display: true,
+    //         grid: {
+    //           color: 'rgba(255, 255, 255, 0.1)',
+    //         },
+    //       },
+    //       y: {
+    //         display: true,
+    //         grid: {
+    //           color: 'rgba(255, 255, 255, 0.1)',
+    //         },
+    //       },
+    //     },
+    //     plugins: {
+    //       zoom: {
+    //         limits: {
+    //           x: {min: 10, max: 'original'},
+    //           y: {min: 10, max: 'original'},
+    //         },
+    //         pan: {
+    //           enabled: true,
+    //           mode: 'x',
+    //         },
+    //         zoom: {
+    //           wheel: {
+    //             enabled: true,
+    //             speed: -0.05,
+    //           },
+    //           pinch: {
+    //             enabled: true,
+    //           },
+    //           mode: 'x',
+    //         },
+    //       },
+    //       legend: {
+    //         align: 'start',
+    //         labels: {
+    //           boxHeight: 20,
+    //         },
+    //       },
+    //       tooltip: {
+    //         animation: false,
+    //       },
+    //       autocolors: {
+    //         customize(context) {
+    //           const colors = context.colors;
+    //           return {
+    //             border: brighten(lighten(colors.border, 0.2)),
+    //             background: brighten(lighten(colors.background, 0.2)),
+    //           };
+    //         },
+    //       },
+    //     },
+    //   },
+    // });
     plotter.onAdd = () => {
-      chart.data.labels = plotter.labels;
-      chart.data.datasets[0].data = plotter.data.capacity;
-      chart.data.datasets[1].data = plotter.data.voltage;
-      chart.data.datasets[2].data = plotter.data.current;
-      chart.data.datasets[3].data = plotter.data.cellDiff;
-
-      plotter.data.cells.forEach((v, i) => {
-        if (!chart.data.datasets[i + 4]) {
-          chart.data.datasets[i + 4] = {
-            hidden: true,
-
-            label: `Cell ${i + 1}`,
-            data: [],
-            fill: false,
-            pointBorderColor: 'rgba(0, 0, 0, 0)',
-            pointBackgroundColor: 'rgba(0, 0, 0, 0)',
-            pointHoverBorderColor: 'rgb(75, 192, 192)',
-            tension: 0.1,
-          };
-        }
-        chart.data.datasets[i + 4].data = v;
+      const opts = option();
+      console.log(myChart);
+      myChart.setOption({
+        series: opts.series,
+        xAxis: opts.xAxis,
       });
 
-      chart.update();
+      //   chart.data.labels = plotter.labels;
+      //   chart.data.datasets[0].data = plotter.data.capacity;
+      //   chart.data.datasets[1].data = plotter.data.voltage;
+      //   chart.data.datasets[2].data = plotter.data.current;
+      //   chart.data.datasets[3].data = plotter.data.cellDiff;
+      //   plotter.data.cells.forEach((v, i) => {
+      //     if (!chart.data.datasets[i + 4]) {
+      //       chart.data.datasets[i + 4] = {
+      //         hidden: true,
+      //         label: `Cell ${i + 1}`,
+      //         data: [],
+      //         fill: false,
+      //         pointBorderColor: 'rgba(0, 0, 0, 0)',
+      //         pointBackgroundColor: 'rgba(0, 0, 0, 0)',
+      //         pointHoverBorderColor: 'rgb(75, 192, 192)',
+      //         tension: 0.1,
+      //       };
+      //     }
+      //     chart.data.datasets[i + 4].data = v;
+      //   });
+      //   chart.update();
     };
   </script>
 </html>
